--- a/css/styles.css
+++ b/css/styles.css
@@ -1249,7 +1249,6 @@ td:last-child {
 
 address {
     font-style: inherit;
-    margin-bottom: 70px;
 }
 
 .address li:not(:last-child) {
@@ -1276,6 +1275,16 @@ address {
 
 a.email {
     text-decoration: underline;
+}
+
+.adrs-item {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.adrs-item:nth-child(1) {
+    align-items: flex-start;
 }
 
 .work-hours {
@@ -1314,6 +1323,11 @@ a.email {
         }
     }
 
+    .booking {
+        text-align: center;
+        padding-bottom: 84px;
+    }
+
     .book-label:not(:last-child) {
         display: block;
         margin-bottom: 44px;
@@ -1329,6 +1343,14 @@ a.email {
 
     .btn-send {
         margin: 0 auto;
+    }
+
+    .contacts {
+        padding-top: 84px;
+    }
+
+    .cntct-ttl {
+        text-align: center;
     }
 
     address {
@@ -1353,6 +1375,10 @@ a.email {
         }
     }
 
+    .booking {
+        padding-bottom: 100px;
+    }
+
     .book-form {
         display: flex;
         flex-flow: wrap;
@@ -1368,8 +1394,22 @@ a.email {
         width: 690px;
     }
 
+    .contacts {
+        padding-top: 100px;
+    }
+
+    .address-time-wrap {
+        display: flex;
+        gap: 30px;
+    }
+
+    address {
+        width: 330px;
+        margin-bottom: 0;
+    }
+
     .address-adrs {
-        max-width: 230px;
+        max-width: 210px;
     }
 }
 
@@ -1398,6 +1438,7 @@ a.email {
 
     .booking {
         flex-grow: 1;
+        padding-bottom: 0;
     }
 
     .book-input {
@@ -1411,43 +1452,25 @@ a.email {
     .contacts {
         width: 785px;
         padding-right: 100px;
+        padding-top: 0;
     }
+    .address-time-wrap {
+        display: block;
+        }
 
     address {
+        width: 100%;
         margin-bottom: 70px;
     }
+
+    .address-adrs {
+        max-width: 210px;
+    }
 }
-
-/* 
-.adrs-item {
-    display: flex;
-    gap: 16px;
-    align-items: center;
-}
-
-.adrs-item:nth-child(1) {
-    align-items: flex-start;
-}
-
-
-
- */
 
 /* ============= FOOTER ============= */
 
-/* ++++++++++ Phone ++++++++++ */
-
-@media screen and (max-width: 767px) {}
-
-/* ++++++++++ Tablet ++++++++++ */
-
-@media screen and (min-width: 768px) {}
-
-/* ++++++++++ Desktop ++++++++++ */
-
-@media screen and (min-width: 1200px) {}
-
-/* .footer {
+.footer {
     padding-top: 56px;
     padding-bottom: 56px;
     background-color: #F7F7F7;
@@ -1468,7 +1491,8 @@ a.email {
     margin-right: 6px;
 }
 
-.footer-cntnr p {
+.footer-cntnr p,
+.footer-list a {
     font-weight: 600;
     font-size: 11px;
     line-height: 1.36;
@@ -1476,16 +1500,14 @@ a.email {
     color: var(--sub-dark-section);
 }
 
-
+.footer-list a {
+    color: var(--title-and-dark-button);
+}
 
 .footer-list {
-display: flex;
-gap: 40px;
-font-weight: 600;
-font-size: 11px;
-line-height: 1.36;
-letter-spacing: 0.2em;
-color: var(--title-and-dark-button);
+    display: flex;
+    gap: 40px;
+    align-items: center;
 }
 
 .ftr-item:first-child {
@@ -1500,23 +1522,11 @@ color: var(--title-and-dark-button);
     width: 60px;
     height: 1px;
     background-color: currentColor;
-} */
+}
 
 /* ========== Modal Window ============ */
 
-/* ++++++++++ Phone ++++++++++ */
-
-@media screen and (max-width: 767px) {}
-
-/* ++++++++++ Tablet ++++++++++ */
-
-@media screen and (min-width: 768px) {}
-
-/* ++++++++++ Desktop ++++++++++ */
-
-@media screen and (min-width: 1200px) {}
-
-/* .backdrop {
+.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -1529,7 +1539,7 @@ color: var(--title-and-dark-button);
 
 .backdrop.is-hidden {
     visibility: hidden;
-    opacity: 0; 
+    opacity: 0;
     pointer-events: none;
     transform: rotate(-45deg) scale(1.5);
 }
@@ -1539,8 +1549,6 @@ color: var(--title-and-dark-button);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 600px;
-    padding: 60px 40px;
     border-radius: 5px;
     background-color: #fff;
 }
@@ -1560,12 +1568,12 @@ color: var(--title-and-dark-button);
     transition: color 500ms, border 500ms;
 }
 
-.btn-cls > svg {
+.btn-cls>svg {
     transition: fill 500ms;
 }
 
-.btn-cls:hover > svg,
-.btn-cls:focus > svg {
+.btn-cls:hover>svg,
+.btn-cls:focus>svg {
     fill: #FF6C00;
 }
 
@@ -1610,7 +1618,42 @@ color: var(--title-and-dark-button);
 
 .modal-btn {
     display: block;
+    width: 160px;
     margin-left: auto;
     margin-right: auto;
-        color: var(--title-and-dark-button);
-} */
+    color: var(--title-and-dark-button);
+}
+/* ++++++++++ Phone ++++++++++ */
+
+@media screen and (max-width: 767px) {
+    .modal {
+    width: 400px;
+    padding: 40px 20px;
+    }
+}
+
+/* ++++++++++ Tablet ++++++++++ */
+
+@media screen and (min-width: 768px) {
+    .modal {
+        width: 500px;
+        padding: 40px 20px;
+    }
+}
+
+/* ++++++++++ Desktop ++++++++++ */
+
+@media screen and (min-width: 1200px) {
+    .modal {
+            width: 600px;
+            padding: 60px 40px;
+        }
+}
+
+/* 
+
+
+
+
+
+ */
